test/ll_parser_explicit_subexpression_test.test
EXPRESSION: SHORT_OBJ: line 10:
This is a line;
^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 11:
This is a line containing a "quoted string".
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: lines 12-13:
This is a line containing a large number
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     12345678901234567890.
^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 15:
     ( hi there ).
     ^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: lines 14-15:
This is a line containing a parenthesized subexpression
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     ( hi there ).
^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 17:
     (x + `y z {p q}' - [ g h ]).
               ^^^^^
EXPRESSION: SHORT_OBJ: line 17:
     (x + `y z {p q}' - [ g h ]).
          ^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: line 17:
     (x + `y z {p q}' - [ g h ]).
                        ^^^^^^^
EXPRESSION: SHORT_OBJ: line 17:
     (x + `y z {p q}' - [ g h ]).
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: lines 16-17:
This line contains subsubexpressions
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + `y z {p q}' - [ g h ]).
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: missing closing bracket `}' inserted; line 19:
     (x + { y z )
                ^
EXPRESSION: SHORT_OBJ: line 19:
     (x + { y z )
          ^^^^^
EXPRESSION: SHORT_OBJ: line 19:
     (x + { y z )
     ^^^^^^^^^^^^
EXPRESSION: SHORT_OBJ: lines 18-19:
This line contains a missing closing bracket
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + { y z )
^^^^^^^^^^^^^^^^^
ERROR: spurious closing bracket found and ignored; line 21:
     (x + y }
            ^
ERROR: missing closing bracket `)' inserted; line 21:
     (x + y }
             ^
EXPRESSION: SHORT_OBJ: line 21:
     (x + y }
     ^^^^^^
EXPRESSION: SHORT_OBJ: lines 20-21:
This line contains an incorrect closing bracket
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + y }
^^^^^^^^^^^
ERROR: lexeme indent 1 too near line indent 0; line 23:
 a token with insufficient indent
 ^
EXPRESSION: SHORT_OBJ: lines 22-23:
This line includes
^^^^^^^^^^^^^^^^^^
 a token with insufficient indent
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
